# novelforge

./: .gitignore  README.md  package.json  release_notes.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_commands.rs  lib.rs  project_template.rs  template_schema.rs
src/components/: AiAssistantPanel.tsx  CardManager.tsx  CharacterHoverCard.tsx  CharacterLinkage.tsx  CodexPanel.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CreateFileDialog.tsx  CreateFileWizard.tsx  CreateProjectDialog.tsx  EditorBubbleMenu.tsx  EditorToolbar.tsx  ErrorBoundary.tsx  FileList.tsx  FindReplace.tsx  FocusTimer.tsx  GlobalSearch.tsx  Launcher.tsx  NovelEditor.tsx  OutlineToChapters.tsx  OutlineView.tsx  ProjectArchiveDialog.tsx  ProjectCard.tsx  SettingsDialog.tsx  ShortcutPanel.tsx  Sidebar.tsx  SkeletonComponents.tsx  StatusComponents.tsx  TemplateManager.tsx  TimelineManager.tsx  UpdateNoticeDialog.tsx  VolumeChapterGenerator.tsx  WelcomeDialog.tsx  Workspace.tsx  WritingStats.tsx
src/hooks/: useAutoSaveOnExit.ts
src/lib/: api.ts  categoryRegistry.ts  characterMention.ts  codexApi.ts  fileTreeUtils.ts  i18n.tsx  indentParagraph.ts  markdownConverter.ts  poetryFormat.ts  recentFiles.ts  settingsStore.ts  store.ts  templateSchema.ts  themeStore.ts  toast.tsx  updateChecker.ts  wordCounter.ts
src/lib/stores/: categorySlice.ts  projectSlice.ts  types.ts  viewSlice.ts
