[package]
name = "novelforge"
version = "2.8.1"
description = "NovelForge - 离线小说创作工作站"
authors = ["NovelForge"]
edition = "2021"

[lib]
name = "novelforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["sync"] }
trash = "5"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
